# _testingbed_exbrowser

./: .gitignore  .gitmodules  eslint.config.mjs  package-lock.json  package.json
.github/actions/build-qtcli/: action.yml
.github/actions/sign-qtcli/: action.yml
.github/workflows/: build-linux.yml  test-qtcli-all.yml
common/: .eslintrc.cjs  .prettierignore
doc/: CMakeLists.txt
doc/config/: vscodeext-project.qdocconf
doc/config/style/: qt5-sidebar.html
doc/online/: vscodeext.qdocconf
doc/src/: externallinks.qdoc
doc/src/getting-started/: vscodeext-overview.qdoc
doc/src/how-to/: vscodeext-how-to-create-files.qdoc  vscodeext-how-to-create-projects.qdoc  vscodeext-how-to-debug-apps-qml.qdoc  vscodeext-how-to-debug-apps-wasm.qdoc  vscodeext-how-to-debug-apps.qdoc  vscodeext-how-to-desing-widget-based-uis.qdoc
doc/src/tutorials/: vscodeext-tutorials-qt-quick.qdoc  vscodeext-tutorials-qt-widgets.qdoc
doc/tutorials/AddressBook/: addressbook.ui
doc/tutorials/QuickAddressBook/: CMakeLists.txt  Main.qml  main.cpp  qml.qrc
doc/tutorials/QuickAddressBook/QuickAddressBookTypes/: AddressBookItem.qml  NewAddressPopup.qml
qt-cli/: .gitignore  .goreleaser.yaml  Development.md  README.md  ThirdPartyNotices.txt  run.sh
qt-cli/src/: go.mod  go.sum
qt-cli/src/assets/templates/projects/cpp/qtquick/: CMakeLists.txt  Main.qml  main.cpp  prompt.yml  templates.yml
qt-cli/src/assets/templates/projects/cpp/qwidget/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  prompt.yml  templates.yml
qt-cli/src/cmds/: new_cmd.go  new_file_cmd.go  preset_cmd.go  root_cmd.go  server_cmd.go  test_cmd.go
qt-cli/src/common/: common.go  error.go  preset.go  preset_manager.go  prompt_file.go  string_validator.go  string_validator_test.go  target_type.go  template_file.go  texts.go  user_preset_file.go  user_preset_manager.go
qt-cli/src/generator/: api.go  api_global.go  generator.go  result.go  validator.go
qt-cli/src/prompt/: result.go  selection.go
qt-cli/src/runner/: default_preset.go  runner.go  text_ui.go
qt-cli/src/server/: api.http  server.go  server_others.go  server_windows.go
qt-cli/src/util/: util.go  (+2 more)
qt-core/: .vscodeignore  CHANGELOG.md  ThirdPartyNotices.txt  eslint.config.mjs  package-lock.json  package.json  package.nls.json  tsconfig.json
qt-core/src/: api.ts  extension.ts  installation-root.ts  project.ts  qtpaths.ts  recommended-settings.ts  texts.ts  util.ts
qt-core/webview-ui/: .prettierrc  ThirdPartyNotices.txt  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
qt-cpp/: CHANGELOG.md  ThirdPartyNotices.txt  package-lock.json  package.json
qt-cpp/src/: cmake-file-api.ts  extension.ts  kit-manager.ts  project.ts  state.ts
qt-lib/: eslint.config.mjs  package-lock.json  package.json
qt-lib/src/: color-provider.ts  configuration-resolver.ts  index.ts  util.ts
qt-qml/: CHANGELOG.md  ThirdPartyNotices.txt  package-lock.json  package.json  package.nls.json  tsconfig.json
qt-qml/src/: extension.ts  installer.ts  project.ts  qmlls.ts
qt-ui/: CHANGELOG.md  package-lock.json  package.json  package.nls.json
qt-ui/src/: project.ts
scripts/: all_dev.ts  generate_licenses.ts  prepare_natvis_files.ts  publish.ts  run_vite.ts
(+112 files in other folders)
